# ed-api

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: api.md  cli.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: authentication.md  comments.md  content.md  courses.md  files.md  lessons.md  threads.md
docs/superpowers/plans/: 2026-04-01-ed-api-impl.md
docs/superpowers/specs/: 2026-04-01-ed-api-design.md
src/ed_api/: __init__.py  _http.py  client.py  content.py  exceptions.py  models.py
src/ed_api/cli/: __init__.py  auth.py  comments.py  content.py  courses.py  files.py  lessons.py  main.py  threads.py
src/ed_api/resources/: __init__.py  comments.py  courses.py  files.py  lessons.py  threads.py  user.py
tests/: conftest.py  test_cli.py  test_client.py  test_comments.py  test_content.py  test_courses.py  test_exceptions.py  test_files.py  test_http.py  test_lessons.py  test_models.py  test_threads.py  test_user.py
tests/fixtures/responses/: comment.json  file_upload.json  lesson_detail.json  lessons_list.json  thread_detail.json  thread_list.json  user_info.json
