[project]
name = "ed-api"
version = "0.1.0"
description = "Full-featured Python client for the EdStem API. Typed models, Typer CLI, markdown/XML conversion."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-httpx>=0.30.0",
    "respx>=0.21.0",
]

[project.scripts]
ed-api = "ed_api.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ed_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.6",
]
